Fix broken styles

--- a/static/less/person.less
+++ b/static/less/person.less
@@ -73,6 +73,10 @@
     }
 }
 
+#bill_title {
+    width: 60%;
+}
+
 #bill_proposed_date {
     width: 15%;
 }
@@ -83,7 +87,7 @@
 
 #person-section-tabs {
     position: absolute;
-    top: 230px;
+    top: 260px;
     bottom: -2px;
     left: -2px;
     right: 0;
